feat(smc): SpecGeneralTest UI使能条件优化 (#754)
* feat(smc): SpecGeneralTest UI使能条件优化

* build: 修改linter检查规则

* fix: 指摘修复

---------