@@ -82,10 +82,9 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
- * 为specGeneral测试文档的测试生成差异文件, 提高测试效率
+ * 为specGeneral测试文档的测试生成差异文件, 提高测试效率.
  *
  * @author unknowIfGuestInDream
  * @date 2022/12/8 23:12
@@ -97,6 +96,7 @@ public class SpecGeneralTest extends SmcSample {
     private CheckBox onlyGenerateCheck;
     private TextField excelField;
     private FileChooser excelFileChooser;
+    private Button generalButton;
     private TextField generalField;
     private DirectoryChooser generalChooser;
     private TextField outputField;
@@ -169,9 +169,9 @@ public class SpecGeneralTest extends SmcSample {
                     // 需要数据抽取
                     ExcelReader reader = ExcelUtil.getReader(FileUtil.file(parentDirectoryPath, excelName));
                     List<String> sheetNames = reader.getSheetNames().stream()
-                        .filter(s -> (markSheetNames.size() == 0 && !ignoreSheetNames.contains(s))
-                            || (markSheetNames.size() != 0 && markSheetNames.contains(s)))
-                        .collect(Collectors.toList());
+                        .filter(s -> (markSheetNames.isEmpty() && !ignoreSheetNames.contains(s))
+                            || (!markSheetNames.isEmpty() && markSheetNames.contains(s)))
+                        .toList();
                     reader.close();
                     String resultPath = outputPath + File.separator
                         + excelName.substring(0, excelName.lastIndexOf("."));
@@ -360,7 +360,7 @@ public class SpecGeneralTest extends SmcSample {
         generalField = new TextField();
         generalField.setMaxWidth(Double.MAX_VALUE);
         generalChooser = new DirectoryChooser();
-        Button generalButton = FxButton.choose();
+        generalButton = FxButton.choose();
         generalField.setEditable(false);
         generalButton.setOnAction(arg0 -> {
             File file = generalChooser.showDialog(stage);
@@ -450,6 +450,8 @@ public class SpecGeneralTest extends SmcSample {
         diff.disabledProperty().bind(emptyValidation);
         openOutDir.disabledProperty().bind(outputValidation);
         mergeResultCheck.disableProperty().bindBidirectional(onlyGenerateCheck.selectedProperty());
+        generalButton.disableProperty().bindBidirectional(onlyGenerateCheck.selectedProperty());
+        generalField.disableProperty().bindBidirectional(onlyGenerateCheck.selectedProperty());
         FileChooserUtil.setOnDrag(excelField, FileChooserUtil.FileType.FILE);
         FileChooserUtil.setOnDrag(outputField, FileChooserUtil.FileType.FOLDER);
         FileChooserUtil.setOnDrag(generalField, FileChooserUtil.FileType.FOLDER);
@@ -522,7 +524,7 @@ public class SpecGeneralTest extends SmcSample {
 
     @Override
     public String getSampleVersion() {
-        return "1.0.4";
+        return "1.0.9";
     }
 
     @Override
@@ -542,7 +544,6 @@ public class SpecGeneralTest extends SmcSample {
 
     /**
      * 获取EndCell值
-     * <p>
      * 为End Sheet 所在行数 -2
      */
     private String getEndCell(String endCellColumn, ExcelReader reader) {
